objects/blng__PaymentMapping__c.object
<CustomObject>
    <description>This is an interim object to maintain the relationship of Payment Auth to Quote and Payment Auth to Order as  many-many.</description>
    <fields>
        <fullName>blng__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line</label>
        <referenceTo>blng__InvoiceLine__c</referenceTo>
        <relationshipLabel>Payments Mapping</relationshipLabel>
        <relationshipName>Payments_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>blng__Invoice__c</referenceTo>
        <relationshipLabel>Payments Mapping</relationshipLabel>
        <relationshipName>Payments_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Payments Mapping</relationshipLabel>
        <relationshipName>Payments_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Payments Mapping</relationshipLabel>
        <relationshipName>Payments_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__PaymentAuthorization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Authorization</label>
        <referenceTo>blng__PaymentAuthorization__c</referenceTo>
        <relationshipLabel>Payments Mapping</relationshipLabel>
        <relationshipName>Payments_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Payments Mapping</relationshipLabel>
        <relationshipName>Payments_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Payments Mapping</relationshipLabel>
        <relationshipName>Payments_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <description>Payment Mapping Status</description>
        <inlineHelpText>Payment Mapping Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PaymentMappingStatus</valueSetName>
        </valueSet>
    </fields>
    <label>Payment Mapping</label>
    <nameField>
        <label>Payment Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>